@@ -149,6 +149,10 @@ SOURCEFILE=SourceControl/SVNSourceControl.cpp
 DEPENDENCY=/boot/home/projects/paladin/Paladin/SourceControl/SVNSourceControl.cpp|/boot/home/projects/paladin/Paladin/SourceControl/SVNSourceControl.h|/boot/home/projects/paladin/Paladin/SourceControl/SourceControl.h|/boot/home/projects/paladin/Paladin/ThirdParty/DPath.h
 SOURCEFILE=SourceControl/SourceControl.cpp
 DEPENDENCY=/boot/home/projects/paladin/Paladin/SourceControl/SourceControl.cpp|/boot/home/projects/paladin/Paladin/SourceControl/SourceControl.h
+GROUP=Text Files
+EXPANDGROUP=no
+SOURCEFILE=NOTES
+SOURCEFILE=CHANGES
 LOCALINCLUDE=BuildSystem
 LOCALINCLUDE=ThirdParty
 LOCALINCLUDE=SourceControl
